SERVER-8525 - fix noobjcheck copy/paste-o in --help